Extension popup goes out of view in Wayland
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox103 | --- | unaffected |
firefox104 | --- | unaffected |
firefox105 | --- | fixed |
People
(Reporter: bbhtt.zn0i8, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(6 files)
GNOME 42.3 Mutter 42.3 gnome-shell 42.3.1 Arch Linux using with MOZ_ENABLE_WAYLAND=1
This started with today's (August 11) nightly update. Happening with ublock origin https://addons.mozilla.org/en-US/firefox/addon/ublock-origin, haven't tested with other extensions.
Steps to reproduce:
- Install ublock origin
- Click "more" twice so that the detailed view is displayed in the extension popup
- Click the extension from the toolbar again
- See the half the popup goes out of view of the browser (see attached screenshot)
Mozregression says this is from https://bugzilla.mozilla.org/show_bug.cgi?id=1777269 so setting the fields accordingly
$ mozregression --good 2022-08-09 --bad 2022-08-10
16:43.31 INFO: No more integration revisions, bisection finished.
16:43.31 INFO: Last good revision: 279d1c18d42345a5a7c34845134690c7758deedf
16:43.31 INFO: First bad revision: 57347135903fecc341b3caf858569cc513b2e2e1
16:43.31 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=279d1c18d42345a5a7c34845134690c7758deedf&tochange=57347135903fecc341b3caf858569cc513b2e2e1
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1777269
Comment 3•3 years ago
|
||
:stransky, since you are the author of the regressor, bug 1777269, could you take a look?
For more information, please visit auto_nag documentation.
Comment 4•3 years ago
|
||
Confirmed, seeing this sporadically on multiple add-ons, FF 105.0a1 (2022-08-11), Wayland on Linux.
Comment 5•3 years ago
|
||
The bug has a release status flag that shows some version of Firefox is affected, thus it will be considered confirmed.
Assignee | ||
Comment 6•3 years ago
|
||
Can you create a screencast of the issue?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Collect_information_for_a_bug_report
Thanks.
Can you create a screencast of the issue?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems?rd=Bug_info_Firefox#Collect_information_for_a_bug_report
Thanks.
Added, thanks.
Assignee | ||
Comment 8•3 years ago
|
||
Can you please run on terminal with MOZ_LOG="WidgetPopup:5" and attach the log here?
Thanks.
Comment 9•3 years ago
|
||
Three different triggers are in this file, from three different webextensions, one after the other.
Reporter | ||
Comment 10•3 years ago
|
||
Can you please run on terminal with MOZ_LOG="WidgetPopup:5" and attach the log here?
Thanks.
Done.
Assignee | ||
Comment 11•3 years ago
|
||
Yes, it's because we fail to move already shown popups...so we need to hide them first :(
Assignee | ||
Comment 12•3 years ago
|
||
Updated•3 years ago
|
Comment 13•3 years ago
|
||
Comment 14•3 years ago
|
||
bugherder |
Description
•