Bug 1784255 [Wayland] Hide a popup when it's positioned by gtk_window_move() r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D154645